design fix margin bottom project listing on mobile 768

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -321,7 +321,7 @@ color:#fff;
     transform: rotateZ(180deg) scale(.9);
 }
 /*WORK LAB BLOG CONTACT PROJECT PAGES*/
-#section-categories>.container-fluid{
+#section-categories>.container-fluid,#section-projects-listings>.container-fluid{
   margin-bottom:0px;
 }
 .category-col {
@@ -899,7 +899,7 @@ h3.project-title.small-category-title {
   }
 }
 @media (max-width: 768px){
-  #section-categories>.container-fluid{
+  #section-categories>.container-fluid,#section-projects-listings>.container-fluid{
     margin-bottom:-15px;
   }
   .project-col {
@@ -1165,7 +1165,7 @@ h3.project-title.small-category-title {
   }
 }
 @media (max-width: 600px){ 
-  #section-categories>.container-fluid{
+  #section-categories>.container-fluid,#section-projects-listings>.container-fluid{
     margin-bottom:0px;
   }
   .project-col {
